<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000">

<!--        타이틀바 영역 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/btn_close"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/back_icon"
                android:scaleType="center"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                android:text="@string/media_filter_save"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:textColor="@color/white"
                android:gravity="center"
                android:textStyle="bold"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

<!--        View Pager -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/lay_seekbar">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

<!--        Seekbar 영역-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lay_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp">

            <TextView
                android:id="@+id/marker_origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/media_filter_orig"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="16dp"
                android:textColor="@color/gray_400"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/seekbar_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0%"
                android:textColor="@color/white"
                android:fontFamily="@font/pppangramsans_medium"
                app:layout_constraintStart_toStartOf="@id/filter_seekbar"
                app:layout_constraintEnd_toEndOf="@id/filter_seekbar"
                app:layout_constraintBottom_toTopOf="@id/filter_seekbar"
                app:layout_constraintHorizontal_bias="0"/>

            <SeekBar
                android:id="@+id/filter_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="0"
                android:progressTint="@color/white"
                android:thumbTint="@color/white"
                android:layout_marginTop="16dp"
                android:progressBackgroundTint="#ddffffff"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/marker_origin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/layout_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#88000000"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center">

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/loading"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/white" />

                <TextView
                    android:id="@+id/txt_process_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/spoqa_han_sans_neo_regular"
                    android:text="보정 중... (10/10)"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_camera_angle_menu_root"
                    android:fontFamily="@font/spoqa_han_sans_neo_regular"
                    android:padding="8dp"
                    android:text="@string/media_filter_cancel"
                    android:textColor="#000000" />

            </LinearLayout>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>